istio/path-based-routing/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-v1
  namespace: istio-test
spec:
  hosts:
  - "nginx.domain.com"
  gateways:
  - istio-system/gw-nginx
  http:
  - match:
    - uri:
        prefix: /v1
    route:
    - destination:
        port:
          number: 80
        host: nginx-v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-v2
  namespace: istio-test
spec:
  hosts:
  - "nginx.domain.com"
  gateways:
  - istio-system/gw-nginx
  http:
  - match:
    - uri:
        prefix: /v2
    route:
    - destination:
        port:
          number: 80
        host: nginx-v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-v3
  namespace: istio-test
spec:
  hosts:
  - "nginx.domain.com"
  gateways:
  - istio-system/gw-nginx
  http:
  - match:
    - uri:
        prefix: /v3
    route:
    - destination:
        port:
          number: 80
        host: nginx-v3
